--- a/publications.html
+++ b/publications.html
@@ -58,13 +58,18 @@
       display: none !important;
     }
 
+    #ftco-navbar {
+      background-color: #f3f6fb !important;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    }
+
     .navbar-nav .nav-link {
       font-size: 0.9rem !important;
       font-weight: 500 !important;
     }
 
     .navbar-nav .nav-link:hover {
-      color: #20b7bf !important;
+      color: #0E4A84 !important;
     }
 
     .navbar-nav .dropdown-menu {
@@ -130,6 +135,15 @@
       box-shadow: 0 25px 55px rgba(15, 23, 42, 0.12);
     }
 
+    a.publication-card {
+      cursor: pointer;
+    }
+
+    a.publication-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 30px 60px rgba(15, 23, 42, 0.15);
+    }
+
     .publication-card + .publication-card {
       margin-top: 1.25rem;
     }
@@ -159,6 +173,18 @@
       color: #B22222;
       font-weight: 700;
     }
+
+    .footer-logo {
+      display: inline-block;
+      background: #fff;
+      margin-bottom: 1rem;
+    }
+
+    .footer-logo img {
+      display: block;
+      max-height: 60px;
+      width: auto;
+    }
   </style>
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -180,7 +206,7 @@
           </li>
           <li class="nav-item active"><a href="publications.html" class="nav-link active"><span>Publications</span></a></li>
           <li class="nav-item"><a href="projects.html" class="nav-link"><span>Projects</span></a></li>
-          <li class="nav-item"><a href="index.html#page-4" class="nav-link"><span>News</span></a></li>
+          <li class="nav-item"><a href="news.html" class="nav-link"><span>News</span></a></li>
         </ul>
       </div>
     </div>
@@ -188,7 +214,7 @@
 
   <section class="ftco-section bg-light" id="publications-section">
     <div class="container">
-      <div class="row justify-content-center mb-5 pb-3">
+      <div class="row justify-content-center mb-5 pb-3 mt-4">
         <div class="col-md-8 heading-section text-center ftco-animate">
           <h2 class="mb-4">Publications</h2>
           <p class="pub-note">Feel free to contact me with any questions or feedback about my publications! (sunwoongy@kaist.ac.kr)</p>
@@ -230,67 +256,67 @@
 
         <h3 class="pub-section-title">Published</h3>
         <a class="publication-card ftco-animate" href="https://academic.oup.com/jcde/article/12/10/133/8267850" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label">11. Journal of Computational Design and Engineering (IF: 6.1, JCR top 6.6%)</span>
+          <span class="pub-label"><strong>11. Journal of Computational Design and Engineering</strong> (IF: 6.1, JCR top 6.6%)</span>
           <p><strong>Year:</strong> 2025</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, R. Vinuesa, and N. Kang</p>
           <p><strong>Title:</strong> Model-Agnostic AI Framework with Explicit Time Integration for Long-Term Fluid Dynamics Prediction</p>
         </a>
         <a class="publication-card ftco-animate" href="https://www.sciencedirect.com/science/article/pii/S0952197625021505" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label">10. Engineering Applications of Artificial Intelligence (IF: 8.0, JCR top 2.6%)</span>
+          <span class="pub-label"><strong>10. Engineering Applications of Artificial Intelligence</strong> (IF: 8.0, JCR top 2.6%)</span>
           <p><strong>Year:</strong> 2025</p>
           <p><strong>Authors:</strong> S. Lee, <span class="yang">S. Yang</span>, and N. Kang</p>
           <p><strong>Title:</strong> Multi-objective Generative Design Framework and Realization for Quasi-serial Manipulator: Considering Kinematic and Dynamic Performance</p>
         </a>
         <a class="publication-card ftco-animate" href="https://www.sciencedirect.com/science/article/pii/S0045782525005262" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label">9. Computer Methods in Applied Mechanics and Engineering (IF: 7.3, JCR top 2.6%)</span>
+          <span class="pub-label"><strong>9. Computer Methods in Applied Mechanics and Engineering</strong> (IF: 7.3, JCR top 2.6%)</span>
           <p><strong>Year:</strong> 2025</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, Y. Lee, and N. Kang</p>
           <p><strong>Title:</strong> Data-Efficient Deep Operator Network for Unsteady Flow: A Multi-Fidelity Approach with Physics-Guided Subsampling</p>
         </a>
         <a class="publication-card ftco-animate" href="https://www.sciencedirect.com/science/article/pii/S0957417425005299" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label">8. Expert Systems with Applications (IF: 7.5, JCR top 5.2%)</span>
+          <span class="pub-label"><strong>8. Expert Systems with Applications</strong> (IF: 7.5, JCR top 5.2%)</span>
           <p><strong>Year:</strong> 2025</p>
           <p><strong>Authors:</strong> J. Kim, J. Park, N. Kim, Y. Yu, K. Chang, C.S. Woo, <span class="yang">S. Yang (co-corresponding author)</span>, and N. Kang</p>
           <p><strong>Title:</strong> Physics-Constrained Graph Neural Networks for Spatio-Temporal Prediction of Drop Impact on OLED Display Panels</p>
         </a>
         <a class="publication-card ftco-animate" href="https://www.sciencedirect.com/science/article/pii/S0045782524003311" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label">7. Computer Methods in Applied Mechanics and Engineering (IF: 7.3, JCR top 2.6%)</span>
+          <span class="pub-label"><strong>7. Computer Methods in Applied Mechanics and Engineering</strong> (IF: 7.3, JCR top 2.6%)</span>
           <p><strong>Year:</strong> 2024</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, H. Kim, Y. Hong, K. Yee, R. Maulik, and N. Kang</p>
           <p><strong>Title:</strong> Data-driven Physics-Informed Neural Networks: A Digital Twin Perspective</p>
         </a>
         <a class="publication-card ftco-animate" href="https://www.sciencedirect.com/science/article/pii/S0952197624000290" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label">6. Engineering Applications of Artificial Intelligence (IF: 8.0, JCR top 2.6%)</span>
+          <span class="pub-label"><strong>6. Engineering Applications of Artificial Intelligence</strong> (IF: 8.0, JCR top 2.6%)</span>
           <p><strong>Year:</strong> 2024</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, and K. Yee</p>
           <p><strong>Title:</strong> Towards Reliable Uncertainty Quantification via Deep Ensembles in Multi-output Regression Task</p>
         </a>
         <a class="publication-card ftco-animate" href="https://www.sciencedirect.com/science/article/pii/S1270963823004546" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label">5. Aerospace Science and Technology (IF: 5.6, JCR top 7.4%)</span>
+          <span class="pub-label"><strong>5. Aerospace Science and Technology</strong> (IF: 5.6, JCR top 7.4%)</span>
           <p><strong>Year:</strong> 2023</p>
           <p><strong>Authors:</strong> Y. Hong, D. Lee, <span class="yang">S. Yang</span>, H. Kook, and K. Yee</p>
           <p><strong>Title:</strong> Exploration of stacked rotor designs for aerodynamics in hover</p>
         </a>
         <a class="publication-card ftco-animate" href="https://link.springer.com/article/10.1007/s00366-022-01617-6" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label">4. Engineering with Computers (IF: 8.7, JCR top 2.6%)</span>
+          <span class="pub-label"><strong>4. Engineering with Computers</strong> (IF: 8.7, JCR top 2.6%)</span>
           <p><strong>Year:</strong> 2023</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, S. Lee, and K. Yee</p>
           <p><strong>Title:</strong> Inverse design optimization framework via a two-step deep learning approach: application to a wind turbine airfoil</p>
         </a>
         <a class="publication-card ftco-animate" href="https://pubs.aip.org/aip/pof/article/34/7/076103/2847447/Physics-aware-reduced-order-modeling-of-transonic" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label">3. Physics of Fluids (IF: 4.6, JCR top 4.4%)</span>
+          <span class="pub-label"><strong>3. Physics of Fluids</strong> (IF: 4.6, JCR top 4.4%)</span>
           <p><strong>Year:</strong> 2022</p>
           <p><strong>Authors:</strong> Y.E. Kang, <span class="yang">S. Yang (co-first author)</span>, and K. Yee</p>
           <p><strong>Title:</strong> Physics-aware reduced-order modeling of transonic flow via β-variational autoencoder</p>
         </a>
         <a class="publication-card ftco-animate" href="https://arc.aiaa.org/doi/10.2514/1.J061643" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label">2. AIAA Journal (IF: 2.5, JCR top 30.9%)</span>
+          <span class="pub-label"><strong>2. AIAA Journal</strong> (IF: 2.5, JCR top 30.9%)</span>
           <p><strong>Year:</strong> 2022</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, and K. Yee</p>
           <p><strong>Title:</strong> Comment on “Novel approach for selecting low-fidelity scale factor in multifidelity metamodeling”</p>
         </a>
         <a class="publication-card ftco-animate" href="https://arc.aiaa.org/doi/10.2514/1.C036489" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label">1. Journal of Aircraft (IF: 2.2, JCR top 39.7%)</span>
+          <span class="pub-label"><strong>1. Journal of Aircraft</strong> (IF: 2.2, JCR top 39.7%)</span>
           <p><strong>Year:</strong> 2022</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, and K. Yee</p>
           <p><strong>Title:</strong> Design rule extraction using multi-fidelity surrogate model for unmanned combat aerial vehicles</p>
@@ -303,8 +329,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <p>
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+          <div class="footer-logo">
+            <img src="images/HYU_logotype_ERICA_blue_kor_eng.png" alt="Hanyang University ERICA logo">
+          </div>
+          <p>&copy; IDEAL, Hanyang University ERICA. All rights reserved.<br>
+            <span>This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
           </p>
         </div>
       </div>
