--- a/news.html
+++ b/news.html
@@ -80,6 +80,18 @@
       border-bottom: 1px solid rgba(0, 0, 0, 0.05);
     }
 
+    .heading-section h2 {
+      font-size: 1.8rem !important;
+      font-weight: 700 !important;
+      margin-bottom: 1rem !important;
+    }
+
+    .heading-section p {
+      font-size: 0.95rem !important;
+      line-height: 1.7 !important;
+      color: #555 !important;
+    }
+
     .news-wrapper {
       max-width: 900px;
       margin: 0 auto;
