--- a/projects.html
+++ b/projects.html
@@ -528,7 +528,7 @@
 	</nav>
 	<section class="ftco-section bg-light" id="projects-section">
 		<div class="container">
-			<div class="row justify-content-center mb-5 pb-3">
+			<div class="row justify-content-center mb-5 pb-3 mt-4">
 				<div class="col-md-8 heading-section text-center ftco-animate">
 					<h2 class="mb-4">Projects</h2>
 					<p>Current and planned initiatives that connect engineering, design, and AI.</p>
