--- a/team-advisor.html
+++ b/team-advisor.html
@@ -610,7 +610,7 @@
 							<span>Team</span>
 						</a>
 						<div class="dropdown-menu" aria-labelledby="teamDropdown">
-							<a class="dropdown-item active" href="team-advisor.html">Advisor</a>
+							<a class="dropdown-item" href="team-advisor.html">Advisor</a>
 							<a class="dropdown-item" href="team-researchers.html">Researchers</a>
 						</div>
 					</li>
