--- a/team-researchers.html
+++ b/team-researchers.html
@@ -516,7 +516,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="teamDropdown">
 							<a class="dropdown-item" href="team-advisor.html">Advisor</a>
-							<a class="dropdown-item active" href="team-researchers.html">Researchers</a>
+							<a class="dropdown-item" href="team-researchers.html">Researchers</a>
 						</div>
 					</li>
 					<li class="nav-item"><a href="publications.html" class="nav-link"><span>Publications</span></a></li>
