--- a/publications.html
+++ b/publications.html
@@ -110,7 +110,7 @@
     }
 
     .pub-section-title {
-      font-size: 1.89rem;
+      font-size: 1.35rem;
       font-weight: 700;
       margin-top: 3rem;
       margin-bottom: 1.25rem;
@@ -125,7 +125,7 @@
       padding: 1.6rem 1.75rem;
       border: 1px solid rgba(14, 74, 132, 0.12);
       box-shadow: 0 20px 45px rgba(15, 23, 42, 0.08);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      transition: transform 0.2s ease, box-shadow 0.2s ease, background-color 0.2s ease;
       color: inherit;
       text-decoration: none;
     }
@@ -133,6 +133,7 @@
     .publication-card:hover {
       transform: translateY(-4px);
       box-shadow: 0 25px 55px rgba(15, 23, 42, 0.12);
+      background-color: rgba(0, 0, 0, 0.04);
     }
 
     a.publication-card {
@@ -160,13 +161,6 @@
 
     .publication-card p {
       margin-bottom: 0.35rem;
-    }
-
-    .pub-note {
-      font-style: italic;
-      margin-top: 1rem;
-      color: #0E4A84 !important;
-      text-align: center;
     }
 
     .yang {
@@ -217,7 +211,7 @@
       <div class="row justify-content-center mb-5 pb-3 mt-4">
         <div class="col-md-8 heading-section text-center ftco-animate">
           <h2 class="mb-4">Publications</h2>
-          <p class="pub-note">Feel free to contact me with any questions or feedback about my publications! (sunwoongy@kaist.ac.kr)</p>
+          <p>Feel free to contact me with any questions or feedback about my publications! (sunwoongy@kaist.ac.kr)</p>
         </div>
       </div>
 
